# darling-syslog

./: CMakeLists.txt  README.md
aslcommon/: CMakeLists.txt  asl_ipc.defs
aslmanager.tproj/: CMakeLists.txt  aslmanager.c
libsystem_asl.tproj/: CMakeLists.txt  asl_ipc.defs
libsystem_asl.tproj/src/: asl.c  asl_client.c  asl_mt_shim.c
syslogd.tproj/: CMakeLists.txt  com.apple.syslogd.plist
util.tproj/: CMakeLists.txt
